--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Mikhail Nepomniashchii",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
